namespace CYA_Adventure_Game_Engine
{
    public interface IModule
    {
        //Dictionary<string, MemberInfo> Exports { get; }
    }

}
